# vaxtract

./: .dockerignore  .gitignore  .zenodo.json  CITATION.cff  Dockerfile  README.md  REPRODUCIBILITY.md  pyproject.toml  schema_known_limitations.md  schema_overview.html
.github/workflows/: ci.yml  publish.yml
cancervac_packet/: RUNBOOK.md  make_report.py  predeploy_gate.py  schema.py  vocab.py
docs/: ARCHITECTURE.md
eval/: derive_gold_template.py  gold_spec.py  score_extraction.py
eval/gold/: keskin_v2_7_gold_TEMPLATE.json
lite_extract/: README.md  RULES.md  build_prompt.py
pr_compare/: pr_compare.py
reference_records/: keskin_extracted.json  keskin_extracted_review.html  li_extracted.json  li_extracted_review.html  rojas_extracted.json  rojas_extracted.refresh.json  rojas_extracted.refresh_review.html  rojas_extracted_review.html
reference_records/archived/: keskin_extracted.preCanon-2026-06-05.json  keskin_extracted.pre_p22_2026-06-07.json  keskin_v2_7_extracted.json  keskin_v2_7_extracted_review.html  li_extracted.pre_a1_cohort_kind.json  li_full_v2_6_extracted.json  li_full_v2_6_extracted_review.html  rojas_extracted.preCanon-2026-06-05.json  rojas_extracted.pre_p22_2026-06-07.json  rojas_extracted.pre_screening_2026-06-12.json
scale/: README.md  Snakefile  config.yaml  extract_one.py  probe_egress.sh
scale/corpus/: pmids.txt  pmids_2026-06-09_validation.txt
scale/singularity/: antvac_extractor.def  build_sif.sh
tests/: conftest.py  test_agent_core.py  test_agent_core_incremental.py  test_agent_core_read_figure.py  test_build_crossreactivity.py  test_build_pool_evidence.py  test_build_pools.py  test_candidate_funnel.py  test_class2_paired_allele.py  test_class_ii_epitope_anchor.py  test_class_ii_minting_gap.py  test_cli_subscription.py  test_cohort_kind.py  test_data_resolution.py  test_epitope_canonicalize.py  test_epitope_linkage_guard.py  test_evidence_anchor.py  test_evidence_grain_b1.py  test_evidence_subset_class.py  test_fb_model.py  test_fb_panels.py  test_fb_reader.py  test_fb_render.py  test_fb_runner.py  test_fb_score.py  test_fb_smoke.py  test_fb_truth_loader.py  test_fb_vector.py  test_field_guidance.py  test_finalize_class_ii_gate.py  test_guidance.py  test_magnitude_nudge.py  test_minimal_epitope_grain.py  test_mutation_specific.py  test_neoantigen_mutation.py  test_outcome_linkage.py  test_peptide_count_guard.py  test_pool_reconciliation.py  test_positional_columns.py  test_pr_compare_qc.py  (+17 more)
tools/: schema_overview.py
vaxtract/: __init__.py  agent_core.py  cli.py  extraction_agent.py  layer2_prompt_deltas.md  prompt_render.py  schema.py  schema_digest.py  table_map.py  vocab.py
vaxtract/figure_benchmark/: RESULTS.md  __init__.py  _probe_pages.py  model.py  numeric_reader.py  panels.py  (+5 more)
